--- a/debian/dot.config
+++ b/debian/dot.config
@@ -14,7 +14,7 @@ CONFIG_BUILDX11=y
 CONFIG_KERNELDIR='@KERNELDIR@'
 CONFIG_BINDIR='/usr/bin'
 CONFIG_SBINDIR='/usr/sbin'
-CONFIG_MANDIR='/usr/man'
+CONFIG_MANDIR='/usr/share/man'
 CONFIG_RUNDIR='/var/run'
 CONFIG_LOCKDIR='/var/lock'
 CONFIG_LOCKFILE='LCK..'
@@ -26,7 +26,7 @@ CONFIG_COUNTRYCODE='31'
 CONFIG_AREACODE='546'
 CONFIG_COUNTRY_PREFIX='+'
 CONFIG_AREA_PREFIX='0'
-CONFIG_DATADIR='/usr/lib/isdn'
+CONFIG_DATADIR='/usr/share/isdn'
 CONFIG_LIB_AREACODE=y
 
 #
@@ -92,7 +92,7 @@ VBOX_SPOOLDIR='/var/spool/vbox'
 VBOX_LOGDIR='/var/log/isdn'
 VBOX_PIDDIR='/var/run'
 VBOX_LOCKDIR='/var/lock'
-VBOX_DOCDIR='/usr/doc/isdnutils/vbox'
+VBOX_DOCDIR='/usr/share/doc/isdnutils/vbox'
 VBOX_TCL='tcl8.0'
 CONFIG_IPPPD=y
 
@@ -110,4 +110,4 @@ CONFIG_IPPPD=y
 #
 CONFIG_GENMAN=y
 CONFIG_FAQ=y
-CONFIG_FAQDIR='/usr/doc/isdnutils/FAQ'
+CONFIG_FAQDIR='/usr/share/doc/isdnutils/FAQ'
