--- a/debian/isdn.conf
+++ b/debian/isdn.conf
@@ -10,10 +10,10 @@ AREACODE=546	# Almelo
 # avon is the old one, I recommend to use areacode, the new one.
 # However, it is easier to add to the avon database...
 CODELIB=AREACODE
+AREALIB=/usr/share/isdn/areacode.dat
 # for avon:
 # CODELIB=AVON
-AREALIB=/usr/lib/isdn/areacode.dat
-AVON=/usr/lib/isdn/avon
+# AVON=/usr/share/isdn/avon
 
 [VARIABLES]
 
