--- a/imontty/imontty.8.in
+++ b/imontty/imontty.8.in
@@ -11,11 +11,23 @@
 imontty \- display status of all ISDN lines
 .SH SYNOPSIS
 .BI imontty
+[ phonebook ]
 .br
 .SH DESCRIPTION
 .I imontty
 displays the status of all ISDN lines. No options are supported. Read access
 to \fI/dev/isdninfo\fR is required.
+
+It is possible to supply the name of a phonebook file. The phonebook file
+has the following format:
+.nf
+
+   number<tab>name for number
+
+.fi
+The number must be the first thing on the line (no leading spaces).
+The name is separated from the number by a tab.
+Lines beginning with # are ignored, as are empty lines.
 
 The output is similar to this:
 .nf
