--- a/debian/control
+++ b/debian/control
@@ -131,7 +131,7 @@ Description: ISDN answering machine, client and server
  the software.
 
 Package: isdnvboxclient
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1), isdnvbox (<<1:3.1pre1b-2)
 Depends: ${shlibs:Depends}, sox | nas-bin | alsautils
 Suggests: isdnvboxserver
