Imported Debian patch 3.6.2005-01-03-4ubuntu1

--- a/debian/rules
+++ b/debian/rules
@@ -242,6 +242,9 @@ endif
 ifneq ($(some_arch_match),yes)
 	DH_OPTIONS='' dh_installinit -pcapiutils \
 		--no-restart-on-upgrade --update-rcd-params='defaults 13 21'
+	mkdir -p debian/capiutils/etc/hotplug/blacklist.d
+	cp -p debian/capiutils.blacklist \
+		debian/capiutils/etc/hotplug/blacklist.d/capiutils
 endif
 	# Ok, for two commands
 	# No, for one command after all. Do this one by hand.
@@ -355,6 +358,8 @@ debian_patches = \
 	libtool \
 	imon-update \
 	ppp-2.4.3 \
+	amd64-fixes \
+	vbox-little-endian \
 
 patch: patch-stamp
 
