--- a/debian/control
+++ b/debian/control
@@ -48,7 +48,7 @@ Description: Most important ISDN-related packages and utilities
 Package: isdnutils-base
 Priority: optional
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc sparc
-Depends: debconf (>=1.2.9), makedev (>=2.3.1-58), ${shlibs:Depends}
+Depends: debconf (>=1.2.9), makedev (>=2.3.1-75ubuntu1), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
 Description: ISDN utilities, the basic (minimal) set
@@ -162,7 +162,7 @@ Description: ISDN answering machine, server
 
 Package: capiutils
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc sparc
-Depends: libcapi20-2 (= ${Source-Version}), ${shlibs:Depends}
+Depends: libcapi20-2 (= ${Source-Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Replaces: isdnactivecards (<< 1:3.6.2004-12-19-1)
 Section: net
 Description: Utilities for CAPI-capable ISDN cards
