--- a/debian/control
+++ b/debian/control
@@ -48,7 +48,7 @@ Description: Most important ISDN-related packages and utilities
 Package: isdnutils-base
 Priority: optional
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc sparc
-Depends: debconf (>=1.2.9), makedev (>=2.3.1-75ubuntu1), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
+Depends: debconf (>=1.2.9), makedev (>=2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
 Description: ISDN utilities, the basic (minimal) set
@@ -216,7 +216,7 @@ Description: plugin for pppd to communicate with CAPI-capable ISDN cards
 
 Package: isdnactivecards
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc sparc
-Depends: isdnutils-base (= ${Source-Version}), ${shlibs:Depends}
+Depends: isdnutils-base (= ${Source-Version}), capiutils (>= ${Source-Version}), ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: Support utilities for active ISDN cards.
  If you have an active ISDN card, you will need things like firmware and the
