--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: utils
 Priority: extra
 Maintainer: Paul Slootman <paul@debian.org>
 Uploaders: Paul Slootman <paul@debian.org>, Matthias Klose <doko@debian.org>
-Standards-Version: 3.6.1
-Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev | libncurses-dev, xlibs-dev, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap-dev, autotools-dev, automake1.4, automake1.6, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release
+Standards-Version: 3.6.2.2
+Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev, xlibs-dev (>= 6.8.2.dfsg.1-5), xutils (>= 6.8.2.dfsg.1-5), tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, autoconf2.13, autoconf, libssl-dev, psutils, linux-kernel-headers (>= 2.6.13+0rc3-1)
 
 Package: isdnutils
 Priority: optional
@@ -48,7 +48,7 @@ Description: Most important ISDN-related packages and utilities
 Package: isdnutils-base
 Priority: optional
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
-Depends: debconf (>= 1.2.9), makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
+Depends: debconf (>= 1.2.9) | debconf-2.0, makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
 Description: ISDN utilities, the basic (minimal) set
@@ -82,7 +82,7 @@ Description: ISDN utilities that use X
 Package: ipppd
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
 Section: net
-Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9), ppp, ${shlibs:Depends}
+Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}
 Suggests: pdnsd
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: PPP daemon for syncPPP over ISDN
@@ -93,7 +93,7 @@ Description: PPP daemon for syncPPP over ISDN
 
 Package: isdnlog
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
-Depends: isdnutils-base (= ${Source-Version}), isdnlog-data (>= ${Source-Version}), debconf (>=1.2.9), ${shlibs:Depends}
+Depends: isdnutils-base (= ${Source-Version}), isdnlog-data (>= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN connection logger
  isdnlog logs all ISDN connections, and can calculate the cost of calls. If
@@ -148,7 +148,7 @@ Description: ISDN answering machine, client
 Package: isdnvboxserver
 Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
 Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
-Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9), ${shlibs:Depends}
+Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
 Suggests: isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, server
