--- a/debian/isdnvboxserver.config
+++ b/debian/isdnvboxserver.config
@@ -103,11 +103,11 @@ fi
 #   A:localhost:RW:username:*invalid*password*:/var/spool/vbox/ttyI6:incoming
 if [ -s /etc/isdn/vboxd.conf ]; then
     eval `perl -- - /etc/isdn/vboxd.conf <<'EOF'
-        while (<>) { last if m,^# Remove this comment if you don't want,; }
+        while (<>) { last if m,^# Remove this comment if you don.t want,; }
         $backtick = chr(96);
         while (<>) {
             s/$backtick/\\\\$backtick/g;
-            s/(["\\$])/\\\\$1/g;
+            s/([\"\\$])/\\\\$1/g;
             next unless m,^A:[^:]+:[^:]+:([^:]+):([^:]+):([^:]+),;
             print "VBOX_USER=\"$1\"\nVBOX_PASSWORD=\"$2\"\nVBOX_USERSPOOL=\"$3\"\n";
             exit 0;
