--- a/debian/rules
+++ b/debian/rules
@@ -264,12 +264,9 @@ endif
 ifneq ($(some_arch_match),yes)
 	DH_OPTIONS='' dh_installinit -pcapiutils \
 		--no-restart-on-upgrade --update-rcd-params='defaults 13 21'
-	mkdir -p debian/capiutils/etc/hotplug/blacklist.d
+	mkdir -p debian/capiutils/etc/modprobe.d
 	cp -p debian/capiutils.blacklist \
-		debian/capiutils/etc/hotplug/blacklist.d/capiutils
-	mkdir -p debian/capiutils/etc/discover.d
-	sed 's/^/skip /' debian/capiutils.blacklist \
-		> debian/capiutils/etc/discover.d/capiutils
+		debian/capiutils/etc/modprobe.d/blacklist-capiutils
 endif
 	# Ok, for two commands
 	# No, for one command after all. Do this one by hand.
