--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev | libncurses-dev, xu
 
 Package: isdnutils
 Priority: optional
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: isdnutils-base (= ${Source-Version}), ipppd, isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Suggests: isdnutils-doc, isdneurofile, pppdcapiplugin, capiutils
 Conflicts: ipppd (<<1:3.1pre1b-23)
@@ -47,7 +47,7 @@ Description: Most important ISDN-related packages and utilities
 
 Package: isdnutils-base
 Priority: optional
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: debconf (>= 1.2.9) | debconf-2.0, makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
@@ -65,7 +65,7 @@ Description: ISDN utilities, the basic (minimal) set
   isdnvboxclient   ISDN answering machine, client side (vbox)
 
 Package: isdnutils-xtools
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: x11
 Depends: isdnutils-base (= ${Source-Version}), ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
@@ -80,7 +80,7 @@ Description: ISDN utilities that use X
  unnecessarily.
 
 Package: ipppd
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: net
 Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}
 Suggests: pdnsd
@@ -92,7 +92,7 @@ Description: PPP daemon for syncPPP over ISDN
  Also needed for allowing dialins from Windows PCs over ISDN.
 
 Package: isdnlog
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: isdnutils-base (= ${Source-Version}), isdnlog-data (>= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN connection logger
@@ -118,7 +118,7 @@ Description: Extensive documentation for isdnutils
  German-language docs also included.
 
 Package: isdnvbox
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1)
 Depends: isdnvboxclient, isdnvboxserver
 Recommends: sox
@@ -146,7 +146,7 @@ Description: ISDN answering machine, client
  it can be connected to via a network.
 
 Package: isdnvboxserver
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
 Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
 Suggests: isdnvboxclient
@@ -161,7 +161,7 @@ Description: ISDN answering machine, server
  the same system.
 
 Package: capiutils
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: libcapi20-3 (= ${Source-Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Replaces: isdnactivecards (<< 1:3.6.2004-12-19-1)
 Section: net
@@ -174,7 +174,7 @@ Description: Utilities for CAPI-capable ISDN cards
  See /usr/share/doc/capiutils/* for some (rudimentary) info.
 
 Package: libcapi20-3
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: libs
 Depends: ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
@@ -189,7 +189,7 @@ Description: libraries for CAPI support
  no need to select it yourself.
 
 Package: libcapi20-dev
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: libdevel
 Depends: libcapi20-3 (= ${Source-Version}), ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
@@ -204,7 +204,7 @@ Description: libraries for CAPI support
  no need to select it yourself.
 
 Package: pppdcapiplugin
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: ppp (>=2.3.11), libcapi20-3 (= ${Source-Version}), ${shlibs:Depends}
 Section: net
 Description: plugin for pppd to communicate with CAPI-capable ISDN cards
@@ -215,7 +215,7 @@ Description: plugin for pppd to communicate with CAPI-capable ISDN cards
  See /usr/share/doc/pppdcapiplugin/* for some (rudimentary) info.
 
 Package: isdnactivecards
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: isdnutils-base (= ${Source-Version}), capiutils (>= ${Source-Version}), ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: Support utilities for active ISDN cards.
@@ -226,7 +226,7 @@ Description: Support utilities for active ISDN cards.
  See /usr/share/doc/isdnactivecards/* for more information.
 
 Package: isdneurofile
-Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc
+Architecture: alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: comm
 Depends: isdnutils-base (= ${Source-Version}), ${shlibs:Depends}
 Description: ISDN eurofile transfer tool
