--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Section: utils
 Priority: extra
 Maintainer: Paul Slootman <paul@debian.org>
 Uploaders: Paul Slootman <paul@debian.org>, Matthias Klose <doko@debian.org>
-Standards-Version: 3.7.2
-Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev | libncurses-dev, xutils | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.8, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release, po-debconf
+Standards-Version: 3.7.3
+Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev | libncurses-dev, xutils | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release, po-debconf
 
 Package: isdnutils
 Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: isdnutils-base (= ${Source-Version}), ipppd, isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient
+Depends: isdnutils-base (= ${binary:Version}), ipppd, isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver
 Suggests: isdnutils-doc, isdneurofile, pppdcapiplugin, capiutils
 Conflicts: ipppd (<<1:3.1pre1b-23)
 Description: Most important ISDN-related packages and utilities
@@ -48,7 +48,8 @@ Description: Most important ISDN-related packages and utilities
 Package: isdnutils-base
 Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: debconf (>= 1.2.9) | debconf-2.0, makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
+Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
+Depends: makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
 Description: ISDN utilities, the basic (minimal) set
@@ -65,9 +66,9 @@ Description: ISDN utilities, the basic (minimal) set
   isdnvboxclient   ISDN answering machine, client side (vbox)
 
 Package: isdnutils-xtools
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: x11
-Depends: isdnutils-base (= ${Source-Version}), ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN utilities that use X
  These are the graphical utilities for ISDN, xmonisdn and xisdnload.
@@ -80,9 +81,9 @@ Description: ISDN utilities that use X
  unnecessarily.
 
 Package: ipppd
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: net
-Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}
 Suggests: pdnsd
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: PPP daemon for syncPPP over ISDN
@@ -93,7 +94,7 @@ Description: PPP daemon for syncPPP over ISDN
 
 Package: isdnlog
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: isdnutils-base (= ${Source-Version}), isdnlog-data (>= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), isdnlog-data (>= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN connection logger
  isdnlog logs all ISDN connections, and can calculate the cost of calls. If
@@ -103,7 +104,7 @@ Description: ISDN connection logger
 
 Package: isdnlog-data
 Architecture: all
-Recommends: isdnlog (>= ${Source-Version})
+Recommends: isdnlog (>= ${source:Version})
 Description: data for isdnlog users
  All data related to call pricing, area codes, etc. in various countries.
  Really only useful when used with isdnlog.
@@ -112,18 +113,18 @@ Package: isdnutils-doc
 Architecture: all
 Section: doc
 Conflicts: isdnutils (<<1:3.1pre1b-1)
-Suggests: isdnutils-base (= ${Source-Version})
+Suggests: isdnutils-base (= ${source:Version})
 Description: Extensive documentation for isdnutils
  This includes the FAQ and other miscellaneous documentation.
  German-language docs also included.
 
 Package: isdnvbox
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1)
 Depends: isdnvboxclient, isdnvboxserver
 Recommends: sox
 Description: ISDN answering machine, client and server
- Let your debian system be your answering machine! Messages can be accessed
+ Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
  .
  This package is a helper to install both the client (with which you listen to
@@ -131,13 +132,13 @@ Description: ISDN answering machine, client and server
  the software.
 
 Package: isdnvboxclient
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1), isdnvbox (<<1:3.1pre1b-2)
 Depends: ${shlibs:Depends}, sox | nas-bin | alsa-utils
 Suggests: isdnvboxserver
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, client
- Let your debian system be your answering machine! Messages can be accessed
+ Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
  .
  This is the client part of the software, with which you can listen to the
@@ -146,13 +147,13 @@ Description: ISDN answering machine, client
  it can be connected to via a network.
 
 Package: isdnvboxserver
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
-Depends: isdnutils-base (= ${Source-Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, openbsd-inetd | inet-superserver
 Suggests: isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, server
- Let your debian system be your answering machine! Messages can be accessed
+ Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
  .
  This is the server part of the software. This is what needs to be installed
@@ -162,7 +163,7 @@ Description: ISDN answering machine, server
 
 Package: capiutils
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: libcapi20-3 (= ${Source-Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
+Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
 Replaces: isdnactivecards (<< 1:3.6.2004-12-19-1)
 Section: net
 Description: Utilities for CAPI-capable ISDN cards
@@ -174,7 +175,7 @@ Description: Utilities for CAPI-capable ISDN cards
  See /usr/share/doc/capiutils/* for some (rudimentary) info.
 
 Package: libcapi20-3
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: libs
 Depends: ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
@@ -189,9 +190,9 @@ Description: libraries for CAPI support
  no need to select it yourself.
 
 Package: libcapi20-dev
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: libdevel
-Depends: libcapi20-3 (= ${Source-Version}), ${shlibs:Depends}
+Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
 Conflicts: libcapi20, libcapi20-2
 Description: libraries for CAPI support
@@ -204,8 +205,8 @@ Description: libraries for CAPI support
  no need to select it yourself.
 
 Package: pppdcapiplugin
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: ppp (>=2.3.11), libcapi20-3 (= ${Source-Version}), ${shlibs:Depends}
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Depends: ppp (>=2.3.11), libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}
 Section: net
 Description: plugin for pppd to communicate with CAPI-capable ISDN cards
  Some ISDN cards (notably the AVM passive cards, when a module from the AVM
@@ -216,9 +217,9 @@ Description: plugin for pppd to communicate with CAPI-capable ISDN cards
 
 Package: isdnactivecards
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: isdnutils-base (= ${Source-Version}), capiutils (>= ${Source-Version}), ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), capiutils (>= ${binary:Version}), ${shlibs:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
-Description: Support utilities for active ISDN cards.
+Description: support utilities for active ISDN cards
  If you have an active ISDN card, you will need things like firmware and the
  means to load that firmware into that card. The utilities are contained in
  this package.
@@ -226,9 +227,9 @@ Description: Support utilities for active ISDN cards.
  See /usr/share/doc/isdnactivecards/* for more information.
 
 Package: isdneurofile
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
+Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: comm
-Depends: isdnutils-base (= ${Source-Version}), ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}
 Description: ISDN eurofile transfer tool
  If you want to send / receive files over an ISDN line with the eurofile
  system, you need this package. Not used much outside of Germany I
