--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: isdnutils
 Section: utils
 Priority: extra
 Maintainer: Paul Slootman <paul@debian.org>
-Uploaders: Paul Slootman <paul@debian.org>, Matthias Klose <doko@debian.org>
+Uploaders: Matthias Klose <doko@debian.org>
 Standards-Version: 3.7.3
-Build-Depends: debhelper (>=4.1.16), bzip2, libncurses5-dev | libncurses-dev, xutils | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release, po-debconf
+Build-Depends: debhelper (>=5), bzip2, libncurses5-dev | libncurses-dev, xutils-dev | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release, po-debconf
 
 Package: isdnutils
 Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: isdnutils-base (= ${binary:Version}), ipppd, isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver
+Depends: isdnutils-base (= ${binary:Version}), ipppd, isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnutils-doc, isdneurofile, pppdcapiplugin, capiutils
 Conflicts: ipppd (<<1:3.1pre1b-23)
 Description: Most important ISDN-related packages and utilities
@@ -49,7 +49,7 @@ Package: isdnutils-base
 Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
-Depends: makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3)
+Depends: makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
 Description: ISDN utilities, the basic (minimal) set
@@ -68,7 +68,7 @@ Description: ISDN utilities, the basic (minimal) set
 Package: isdnutils-xtools
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: x11
-Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN utilities that use X
  These are the graphical utilities for ISDN, xmonisdn and xisdnload.
@@ -94,7 +94,7 @@ Description: PPP daemon for syncPPP over ISDN
 
 Package: isdnlog
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: isdnutils-base (= ${binary:Version}), isdnlog-data (>= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), isdnlog-data (>= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN connection logger
  isdnlog logs all ISDN connections, and can calculate the cost of calls. If
@@ -104,6 +104,7 @@ Description: ISDN connection logger
 
 Package: isdnlog-data
 Architecture: all
+Depends: ${misc:Depends}
 Recommends: isdnlog (>= ${source:Version})
 Description: data for isdnlog users
  All data related to call pricing, area codes, etc. in various countries.
@@ -112,6 +113,7 @@ Description: data for isdnlog users
 Package: isdnutils-doc
 Architecture: all
 Section: doc
+Depends: ${misc:Depends}
 Conflicts: isdnutils (<<1:3.1pre1b-1)
 Suggests: isdnutils-base (= ${source:Version})
 Description: Extensive documentation for isdnutils
@@ -121,7 +123,7 @@ Description: Extensive documentation for isdnutils
 Package: isdnvbox
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1)
-Depends: isdnvboxclient, isdnvboxserver
+Depends: isdnvboxclient, isdnvboxserver, ${misc:Depends}
 Recommends: sox
 Description: ISDN answering machine, client and server
  Let your Debian system be your answering machine! Messages can be accessed
@@ -134,7 +136,7 @@ Description: ISDN answering machine, client and server
 Package: isdnvboxclient
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1), isdnvbox (<<1:3.1pre1b-2)
-Depends: ${shlibs:Depends}, sox | nas-bin | alsa-utils
+Depends: ${shlibs:Depends}, sox | nas-bin | alsa-utils, ${misc:Depends}
 Suggests: isdnvboxserver
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, client
@@ -149,7 +151,7 @@ Description: ISDN answering machine, client
 Package: isdnvboxserver
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
-Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, openbsd-inetd | inet-superserver, makedev
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, openbsd-inetd | inet-superserver, makedev, ${misc:Depends}
 Suggests: isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: ISDN answering machine, server
@@ -163,7 +165,7 @@ Description: ISDN answering machine, server
 
 Package: capiutils
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), makedev
+Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), makedev, ${misc:Depends}
 Replaces: isdnactivecards (<< 1:3.6.2004-12-19-1)
 Section: net
 Description: Utilities for CAPI-capable ISDN cards
@@ -177,7 +179,7 @@ Description: Utilities for CAPI-capable ISDN cards
 Package: libcapi20-3
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: libs
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
 Conflicts: libcapi20, libcapi20-2
 Description: libraries for CAPI support
@@ -192,7 +194,7 @@ Description: libraries for CAPI support
 Package: libcapi20-dev
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: libdevel
-Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}
+Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
 Conflicts: libcapi20, libcapi20-2
 Description: libraries for CAPI support
@@ -206,7 +208,7 @@ Description: libraries for CAPI support
 
 Package: pppdcapiplugin
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: ppp (>=2.3.11), libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}
+Depends: ppp (>=2.3.11), libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Section: net
 Description: plugin for pppd to communicate with CAPI-capable ISDN cards
  Some ISDN cards (notably the AVM passive cards, when a module from the AVM
@@ -217,7 +219,7 @@ Description: plugin for pppd to communicate with CAPI-capable ISDN cards
 
 Package: isdnactivecards
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
-Depends: isdnutils-base (= ${binary:Version}), capiutils (>= ${binary:Version}), ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), capiutils (>= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
 Description: support utilities for active ISDN cards
  If you have an active ISDN card, you will need things like firmware and the
@@ -229,7 +231,7 @@ Description: support utilities for active ISDN cards
 Package: isdneurofile
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: comm
-Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}
+Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN eurofile transfer tool
  If you want to send / receive files over an ISDN line with the eurofile
  system, you need this package. Not used much outside of Germany I
