Imported Debian patch 3.9.20060704-5

--- a/debian/isdnutils-base.config
+++ b/debian/isdnutils-base.config
@@ -3,6 +3,8 @@
 # Source debconf library.
 . /usr/share/debconf/confmodule
  
+set -e
+
 if [ -s /etc/isdn/firmware.conf ]; then
     firmware=`perl -ne 'if (/^FIRMWARE=([^\s]+)/) { print $1; }' /etc/isdn/firmware.conf`
     firmwarecards=`perl -ne 'if (/^FIRMWARECARDS=([^\s#]+)/) { print $1; }' /etc/isdn/isdn.conf`
