--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,6 @@ Source: isdnutils
 Section: utils
 Priority: extra
 Maintainer: Debian QA Group <packages@qa.debian.org>
-Uploaders: Paul Slootman <paul@debian.org>
 Standards-Version: 3.7.3
 Build-Depends: debhelper (>=5), bzip2, libncurses5-dev | libncurses-dev, xutils-dev | imake, tcl8.3-dev, linuxdoc-tools (>=0.9.20), groff, libtool, libxaw7-dev, libreadline5-dev | libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4, automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils, lsb-release, po-debconf
 
@@ -12,38 +11,30 @@ Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerp
 Depends: isdnutils-base (= ${binary:Version}), ipppd, isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnutils-doc, isdneurofile, pppdcapiplugin, capiutils
 Conflicts: ipppd (<<1:3.1pre1b-23)
-Description: Most important ISDN-related packages and utilities
- Note that for an external ISDN adapter, you do NOT need this package or any of
- the related ones. This is only for use with an internal ISDN adapter.
- Choosing this package will select the most frequently used components.
+Description: ISDN utilities - dependency package
+ This package depends on the most frequently used components for an
+ ISDN system using an internal adapter; they are not required for an
+ external adapter.
  .
- The current version of isdnutils is split up into component packages, to make
- it easier to fine-tune what is installed; hardly anyone needs everything.
- However, it's not possible to automatically select what is needed 
- This is a dependency package to ease installation, and choosing this selects
- the most important new packages. After installation, this package can be
- safely removed.
+ The isdnutils suite is split up into component packages, to make it
+ easier to fine-tune what is installed; hardly anyone needs everything.
+ However, it's not possible to select what is needed automatically. This
+ dependency package just ensures the most important components are
+ installed, and can be safely removed again once that is done.
  .
- The component packages selected by this are:
-  isdnutils-base   basic set of ISDN utilities.
-  ipppd            for networking over ISDN with syncPPP.
-  isdnlog          for logging ISDN calls (and much more).
-  isdnutils-xtools for X ISDN apps (currently only xisdnload and xmonisdn)
-  isdnvboxserver   ISDN answering machine, things needed on the server system.
-  isdnvboxclient   ISDN answering machine, client side (vbox).
+ The component packages involved are:
+  * isdnutils-base:   the basic set of ISDN utilities;
+  * ipppd:            for networking over ISDN with syncPPP;
+  * isdnlog:          for logging ISDN calls (and much more);
+  * isdnutils-xtools: graphical utilities (xisdnload and xmonisdn);
+  * isdnvboxclient:   ISDN answering machine client;
+  * isdnvboxserver:   ISDN answering machine server.
  .
- Not selected (although dselect will suggest some) are:
-  isdnutils-doc    for extensive documentation (basic docs are of course
-                   included with each package).
-  isdneurofile     file transfer over ISDN with the special eurofile protocol.
-  capiutils        CAPI utilies.
-  pppdcapiplugin   a plugin for the normal ppp daemon that uses CAPI to
-                   communicate over ISDN.
-  libcapi20-3      shared library package needed by CAPI applications (will be
-                   selected automatically when needed).
-  libcapi20-dev    libcapi20 development files.
-  isdnactivecards  firmware for mostly active ISDN cards, and other related
-                   tools.
+ It also suggests the following optional extras:
+  * capiutils:        CAPI utilities;
+  * isdneurofile:     for file transfer over the EUROFILE protocol;
+  * isdnutils-doc:    additional documentation;
+  * pppdcapiplugin:   a CAPI plugin for the normal PPP daemon.
 
 Package: isdnutils-base
 Priority: optional
@@ -52,63 +43,55 @@ Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
 Depends: udev | makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-23)
-Description: ISDN utilities, the basic (minimal) set
- These utilities are the basic set of ISDN utilities that you need when you
- have an ISDN card installed. For complete functionality comparable to the
- old isdnutils package, you also need the following packages:
- .
-  ipppd            for networking over ISDN with syncPPP
-  isdnlog          for logging ISDN calls (and much more)
-  isdnutils-xtools for X ISDN apps (currently only xisdnload and xmonisdn)
-  isdnutils-doc    for extensive documentation (basic docs are of course
-                   included with each package)
-  isdnvboxserver   ISDN answering machine, things needed on a server system
-  isdnvboxclient   ISDN answering machine, client side (vbox)
+Description: ISDN utilities - minimal set
+ This package provides the basic set of ISDN utilities needed to make use
+ of an ISDN card. For more complete functionality, install the isdnutils
+ dependency package.
 
 Package: isdnutils-xtools
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: x11
 Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
-Description: ISDN utilities that use X
- These are the graphical utilities for ISDN, xmonisdn and xisdnload.
- They provide, each in their own way, a visual indication of the status of
- the ISDN lines, so that it is directly obvious when there is a connection,
- for example.
+Description: ISDN utilities - graphical tools
+ This package provides xmonisdn and xisdnload, which are graphical tools
+ for ISDN. Each in its own way gives a visual indication of the status of
+ the ISDN lines, so that (for example) it is obvious when there is a
+ connection.
  .
- This has been separated out of the main isdnutils package so that if you
- don't run X but do need ISDN, you don't have to include the X libraries
- unnecessarily.
+ They have been split out into a separate package to allow the others
+ in the suite to avoid dependencies on the X Window System.
 
 Package: ipppd
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: net
-Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, udev | makedev
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, udev | makedev, ${misc:Depends}
 Suggests: pdnsd
 Replaces: isdnutils (<<1:3.1pre1b-0)
-Description: PPP daemon for syncPPP over ISDN
- If you want to connect to the internet over ISDN with an internal ISDN card,
- you will need this.
- .
- Also needed for allowing dialins from Windows PCs over ISDN.
+Description: ISDN utilities - PPP daemon
+ This package provides the specially modified version of the Point to
+ Point Protocol daemon needed to connect to the Internet through an
+ internal ISDN card. It also supports dial-in connections from Windows
+ clients.
 
 Package: isdnlog
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: isdnutils-base (= ${binary:Version}), isdnlog-data (>= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
-Description: ISDN connection logger
- isdnlog logs all ISDN connections, and can calculate the cost of calls. If
- sufficient data is available, it can even recommend which alternate carrier
- would have been cheaper for a given call. For countries where calls are charged
- per discrete unit, it can disconnect the line just before the next unit starts.
+Description: ISDN utilities - connection logger
+ This package provides a set of utilities that can log ISDN connections and
+ calculate the cost of calls. If sufficient data is available, it can even
+ recommend which alternate carrier would have been cheaper for a given call.
+ For countries where calls are charged per discrete unit, it can disconnect
+ the line just before the next unit starts.
 
 Package: isdnlog-data
 Architecture: all
 Depends: ${misc:Depends}
 Recommends: isdnlog (>= ${source:Version})
-Description: data for isdnlog users
- All data related to call pricing, area codes, etc. in various countries.
- Really only useful when used with isdnlog.
+Description: ISDN utilities - connection logger data
+ This package provides data related to call pricing, area codes, etcetera,
+ in various countries, and is only useful with isdnlog.
 
 Package: isdnutils-doc
 Architecture: all
@@ -116,22 +99,21 @@ Section: doc
 Depends: ${misc:Depends}
 Conflicts: isdnutils (<<1:3.1pre1b-1)
 Suggests: isdnutils-base (= ${source:Version})
-Description: Extensive documentation for isdnutils
- This includes the FAQ and other miscellaneous documentation.
- German-language docs also included.
+Description: ISDN utilities - documentation
+ This package includes the FAQ and other miscellaneous documentation
+ for the ISDN utilities suite, in English and German.
 
 Package: isdnvbox
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Conflicts: isdnutils (<<1:3.1pre1b-1)
 Depends: isdnvboxclient, isdnvboxserver, ${misc:Depends}
 Recommends: sox
-Description: ISDN answering machine, client and server
+Description: ISDN utilities - answering machine dependency package
  Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
  .
- This package is a helper to install both the client (with which you listen to
- the messages) and the server (with which the messages are recorded) parts of
- the software.
+ This package depends for convenience on both the vbox server (with which
+ the messages are recorded) and the client (with which you listen to them).
 
 Package: isdnvboxclient
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
@@ -139,14 +121,13 @@ Conflicts: isdnutils (<<1:3.1pre1b-1), isdnvbox (<<1:3.1pre1b-2)
 Depends: ${shlibs:Depends}, sox | nas-bin | alsa-utils, ${misc:Depends}
 Suggests: isdnvboxserver
 Replaces: isdnutils (<<1:3.1pre1b-0)
-Description: ISDN answering machine, client
+Description: ISDN utilities - answering machine client
  Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
  .
- This is the client part of the software, with which you can listen to the
- messages. Those messages are recorded on a system with the server part of
- the software (isdnvboxserver); that system may be elsewhere, as long as
- it can be connected to via a network.
+ This package provides the vbox client, with which you can listen to the
+ messages recorded by a vbox server (either running on the same machine or
+ accessible over the network).
 
 Package: isdnvboxserver
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
@@ -154,12 +135,12 @@ Conflicts: isdnutils (<<1:3.1pre1b-1),isdnvbox (<<1:3.1pre1b-2)
 Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, openbsd-inetd | inet-superserver, udev | makedev, ${misc:Depends}
 Suggests: isdnvboxclient
 Replaces: isdnutils (<<1:3.1pre1b-0)
-Description: ISDN answering machine, server
+Description: ISDN utilities - answering machine server
  Let your Debian system be your answering machine! Messages can be accessed
  remotely, automatically emailed, etc.
  .
- This is the server part of the software. This is what needs to be installed
- on the system with the ISDN card. To actually listen to the recorded messages
+ This package provides the vbox server, which must be installed on the
+ system with the ISDN card. To actually listen to the recorded messages
  you need the client package (isdnvboxclient) somewhere, not necessarily on
  the same system.
 
@@ -168,13 +149,11 @@ Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerp
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), udev | makedev, ${misc:Depends}
 Replaces: isdnactivecards (<< 1:3.6.2004-12-19-1)
 Section: net
-Description: Utilities for CAPI-capable ISDN cards
+Description: ISDN utilities - tools for CAPI-capable cards
  Some ISDN cards (notably the AVM active cards, and the AVM passive cards
  when using the proprietary drivers) are accessed via the CAPI interface.
  The package contains utilities to initialize and get information about
  these cards.
- .
- See /usr/share/doc/capiutils/* for some (rudimentary) info.
 
 Package: libcapi20-3
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
@@ -182,14 +161,13 @@ Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
 Conflicts: libcapi20, libcapi20-2
-Description: libraries for CAPI support
+Description: ISDN utilities - CAPI support libraries
  If you have an ISDN card with which CAPI works, you may be able to use
- applications that use CAPI, e.g. a fax system. At this point, AVM cards can
+ CAPI-capable applications such as fax systems. At this point, AVM cards can
  work with CAPI, as well as some active cards. For the AVM passive cards you
  need to visit the www.AVM.de website.
  .
- If you need this package, it will be installed automatically via dependencies,
- no need to select it yourself.
+ This package will be installed automatically if needed.
 
 Package: libcapi20-dev
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
@@ -197,42 +175,38 @@ Section: libdevel
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0), libcapi20, libcapi20-2
 Conflicts: libcapi20, libcapi20-2
-Description: libraries for CAPI support
+Description: ISDN utilities - CAPI development libraries
  If you have an ISDN card with which CAPI works, you may be able to use
- applications that use CAPI, e.g. a fax system. At this point, AVM cards can
+ CAPI-capable applications such as fax systems. At this point, AVM cards can
  work with CAPI, as well as some active cards. For the AVM passive cards you
  need to visit the www.AVM.de website.
  .
- If you need this package, it will be installed automatically via dependencies,
- no need to select it yourself.
+ This package provides files needed for development of CAPI-aware software.
 
 Package: pppdcapiplugin
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: ppp (>=2.3.11), libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Section: net
-Description: plugin for pppd to communicate with CAPI-capable ISDN cards
- Some ISDN cards (notably the AVM passive cards, when a module from the AVM
- website is loaded) can be used by CAPI utilities.
- This is a plugin for the regular PPP daemon to use CAPI on such cards.
+Description: ISDN utilities - pppd plug-in for CAPI support
+ Some ISDN cards can be used by CAPI utilities - for instance the AVM
+ passive cards, when a module from the AVM website is loaded.
  .
- See /usr/share/doc/pppdcapiplugin/* for some (rudimentary) info.
+ This package provides a plug-in for the regular PPP daemon to use CAPI
+ on such cards.
 
 Package: isdnactivecards
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Depends: isdnutils-base (= ${binary:Version}), capiutils (>= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: isdnutils (<<1:3.1pre1b-0)
-Description: support utilities for active ISDN cards
- If you have an active ISDN card, you will need things like firmware and the
- means to load that firmware into that card. The utilities are contained in
- this package.
- .
- See /usr/share/doc/isdnactivecards/* for more information.
+Description: ISDN utilities - active ISDN card support
+ This package provides firmware and firmware-loading utilities for active
+ ISDN cards (the Eicon, Eicon Diva, IBM Active 2000, ICN, or PCBIT-D cards).
 
 Package: isdneurofile
 Architecture: alpha amd64 arm armeb armel armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390
 Section: comm
 Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: ISDN eurofile transfer tool
- If you want to send / receive files over an ISDN line with the eurofile
- system, you need this package. Not used much outside of Germany I
- believe (and not much there either).
+Description: ISDN utilities - EUROFILE support
+ This package provides tools for sending/receiving files over an ISDN
+ connection via the EUROFILE protocol, which is not used much outside of
+ Germany (or even inside it).
