--- a/debian/isdnlog.config
+++ b/debian/isdnlog.config
@@ -3,7 +3,7 @@
 # Source debconf library.
 . /usr/share/debconf/confmodule
  
-set +e
+set -e
 
 if [ -s /etc/isdn/isdn.conf ]; then
     countrycode=`perl -ne 'if (/^COUNTRYCODE=0*(\d+)/) { print $1; }' /etc/isdn/isdn.conf`
