Imported Debian patch 3.9.20060704-9

--- a/debian/rules
+++ b/debian/rules
@@ -397,7 +397,8 @@ debian_patches = \
 	capi20-msg2str-safety \
 	lsb-init-script \
 	bashisms \
-	isdneurofile-bashism
+	isdneurofile-bashism \
+	va_list
 
 ifeq ($(distribution),Ubuntu)
   debian_patches += no-imake
