debian/isdnutils-base.config: abort on error as recommended by policy
* test for non-emptyness of /etc/isdn/isdn.conf during script execution

--- a/debian/isdnutils-base.config
+++ b/debian/isdnutils-base.config
@@ -1,11 +1,14 @@
 #!/bin/sh
+set -e
 
 # Source debconf library.
 . /usr/share/debconf/confmodule
- 
+
 if [ -s /etc/isdn/firmware.conf ]; then
     firmware=`perl -ne 'if (/^FIRMWARE=([^\s]+)/) { print $1; }' /etc/isdn/firmware.conf`
-    firmwarecards=`perl -ne 'if (/^FIRMWARECARDS=([^\s#]+)/) { print $1; }' /etc/isdn/isdn.conf`
+    if [ -s /etc/isdn/isdn.conf ]; then
+        firmwarecards=`perl -ne 'if (/^FIRMWARECARDS=([^\s#]+)/) { print $1; }' /etc/isdn/isdn.conf`
+    fi
     if [ ! -z "$firmware" ]; then
         db_set isdnutils/firmware "$firmware"
     fi
