debian/control: add Homepage and Vcs fields

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,9 @@ Build-Depends: debhelper (>=5), bzip2, libncurses5-dev | libncurses-dev,
  libxaw7-dev, libreadline-dev, libpcap0.8-dev, autotools-dev, automake1.4,
  automake1.7, automake1.9, autoconf2.13, autoconf, libssl-dev, psutils,
  lsb-release, po-debconf
+Homepage: http://www.isdn4linux.de
+Vcs-Git: git://git.debian.org/git/collab-maint/isdnutils.git
+Vcs-Browser: http://git.debian.org/?p=collab-maint/isdnutils.git
 
 Package: isdnutils
 Priority: optional
