--- a/ipppd/configure.in
+++ b/ipppd/configure.in
@@ -22,6 +22,7 @@ AC_CHECK_LIB(bsd, daemon,HAVE_LIBBSD=1; AC_DEFINE(HAVE_LIBBSD),
 dnl Replace `main' with a function in -lcrypt:
 AC_CHECK_LIB(crypt, main,HAVE_LIBCRYPT=1; AC_DEFINE(HAVE_LIBCRYPT))
 AC_CHECK_LIB(des, des_ecb_encrypt, HAVE_LIBDES=1; AC_DEFINE(HAVE_LIBDES))
+AC_CHECK_LIB(ssl, DES_ecb_encrypt, HAVE_LIBSSL=1; AC_DEFINE(HAVE_LIBSSL))
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -111,6 +112,7 @@ AC_ARG_ENABLE(ippp-filter,
 AC_SUBST(I4LVERSION)
 AC_SUBST(MANDATE)
 AC_SUBST(HAVE_LIBDES)
+AC_SUBST(HAVE_LIBSSL)
 AC_SUBST(HAVE_LIBCRYPT)
 AC_SUBST(HAVE_LIBBSD)
 AC_SUBST(HAVE_SHADOW_H)
