--- a/isdnlog/samples/isdn.conf.pl.in
+++ b/isdnlog/samples/isdn.conf.pl.in
@@ -1,7 +1,6 @@
-# example of /etc/isdn/isdn.conf
-# copy this file to /etc/isdn/isdn.conf and edit
+# example of @I4LCONFDIR@/@CONFFILE@
 #
-# More information: /usr/doc/packages/i4l/isdnlog/README
+# More information: @DOCDIR@/*
 
 
 [GLOBAL]
@@ -15,7 +14,7 @@ AREACODE        = 22
 [VARIABLES]
 
 [ISDNLOG]
-LOGFILE = /var/log/isdn.log
+LOGFILE = @LOGFILE@
 ILABEL  = %b %e %T %ICall to tei %t from %N2 on %n2
 OLABEL  = %b %e %T %Itei %t calling %N2 with %n2
 REPFMTWWW       = "%X %D %17.17H %T %-17.17F %-20.20l SI: %S %9u %U %I %O"
@@ -25,12 +24,12 @@ REPFMT  = "  %X %D %16.16H %T %-16.16F %7u %U %I %O"
 CHARGEMAX       = 10.00
 CURRENCY = 0.3538,PLN
 
-COUNTRYFILE = /usr/lib/isdn/country-de.dat
-RATECONF= /etc/isdn/rate.conf
-RATEFILE= /usr/lib/isdn/rate-pl.dat
-HOLIDAYS= /usr/lib/isdn/holiday-de.dat
-#ZONEFILE= /usr/lib/isdn/zone-de-%s.cdb
-DESTFILE= /usr/lib/isdn/dest.cdb
+COUNTRYFILE = @DATADIR@/country-de.dat
+RATECONF= @I4LCONFDIR@/rate.conf
+RATEFILE= @DATADIR@/rate-pl.dat
+HOLIDAYS= @DATADIR@/holiday-de.dat
+#ZONEFILE= @DATADIR@/zone-de-%s.cdb
+DESTFILE= @DATADIR@/dest.cdb
 
 # providerselect
 VBN = 010
