--- a/isdnlog/Makefile.in
+++ b/isdnlog/Makefile.in
@@ -1,4 +1,4 @@
-## $Id: Makefile.in,v 1.214 2004/07/24 12:03:36 tobiasb Exp $
+## $Id: Makefile.in,v 1.216 2004/10/28 15:10:34 tobiasb Exp $
 ##
 ## ISDN accounting for isdn4linux.
 ##
@@ -19,6 +19,15 @@
 ## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 ##
 ## $Log: Makefile.in,v $
+## Revision 1.216  2004/10/28 15:10:34  tobiasb
+## Moved down the regular rule just added for samples/isdn.conf
+## so that all is again the default target.
+##
+## Revision 1.215  2004/10/28 01:53:29  tobiasb
+## Enabled text substitution by configure for isdnlog sample config files
+## The pointer to isdnlog documentation required a new config option.
+## Added another config option and data for Chinese area codes.
+##
 ## Revision 1.214  2004/07/24 12:03:36  tobiasb
 ## Increased version number from 4.68 to 4.69.  It is planned to collect
 ## changes with this odd version number for a longer period of time.
@@ -1689,11 +1698,16 @@ ifndef (I4LVERSION)
 I4LVERSION := $(STORED_I4LVERSION)
 endif
 
+# Used for all and distclean, 
+# including sample config files after text substitution.
 MANPAGES    = isdnlog/callerid.conf.5 isdnlog/isdn.conf.5 \
 	      isdnlog/isdnformat.5 isdnlog/isdnlog.5 isdnlog/isdnlog.8 \
 	      isdnlog/isdnlog.users.5 isdnrep/isdnrep.1 isdnconf/isdnconf.1 \
 	      tools/isdnrate.1 tools/rate-files.5 \
 	      isdnrep/isdnbill.1
+MANPAGES   += samples/isdn.conf \
+	      samples/isdn.conf.at samples/isdn.conf.de samples/isdn.conf.lu \
+	      samples/isdn.conf.nl samples/isdn.conf.no samples/isdn.conf.pl
 
 ifeq ($(POSTGRES),1)
 DEFS       += -DPOSTGRES
@@ -1769,6 +1783,12 @@ PCFLAGS = mode=oracle ireclen=160 lines=yes
 
 %.8: %.8.in config.status
 	./config.status $@
+
+samples/isdn.conf.%: samples/isdn.conf.%.in config.status
+	./config.status $@
+
+# samples/isdn.conf is not matched by the rule rule above,
+# a regular rule for it can be found further below after all
 
 ISDNLOG_OBJS =  isdnlog/isdnlog.o isdnlog/processor.o isdnlog/functions.o \
                 isdnlog/server.o isdnlog/start_prog.o isdnlog/messages.o  \
@@ -1859,6 +1879,9 @@ Makefile: Makefile.in config.status
 
 config.status: configure
 	./config.status --recheck
+
+samples/isdn.conf: samples/isdn.conf.in config.status
+	./config.status $@
 
 # recompile when VERSION in Makefile changes for binaries with new version:
 FILES_USING_VERSION = isdnlog/isdnlog.o isdnlog/processor.o isdnlog/user_access.o isdnrep/isdnrep.o isdnconf/isdnconf.o tools/isdnconf.o tools/tools.o
