--- a/isdnlog/samples/isdn.conf.at.in
+++ b/isdnlog/samples/isdn.conf.at.in
@@ -1,7 +1,6 @@
-# example of /etc/isdn/isdn.conf 
-# copy this file to /etc/isdn/isdn.conf and edit
+# example of @I4LCONFDIR@/@CONFFILE@
 #
-# More information: /usr/doc/packages/i4l/isdnlog/README
+# More information: @DOCDIR@/*
 
 
 [GLOBAL]
@@ -15,7 +14,7 @@ AREACODE        = 02555
 [VARIABLES]
 
 [ISDNLOG]
-LOGFILE = /var/log/isdn.log
+LOGFILE = @LOGFILE@
 ILABEL  = %b %e %T %ICall to tei %t from %N2 on %n2
 OLABEL  = %b %e %T %Itei %t calling %N2 with '%n0'
 REPFMTWWW       = "%X %D %17.17H %T %-17.17F %-20.20l SI: %S %9u %U %I %O"
@@ -25,12 +24,12 @@ REPFMT  = "  %X %D %16.16H %T %-16.16F %7u %U %I %O"
 CHARGEMAX       = 50.00
 CURRENCY = 1.056,EUR
 
-COUNTRYFILE = /usr/lib/isdn/country.dat
-RATECONF= /etc/isdn/rate.conf
-RATEFILE= /usr/lib/isdn/rate-at.dat
-HOLIDAYS= /usr/lib/isdn/holiday-at.dat
-ZONEFILE= /usr/lib/isdn/zone-at-%s.cdb
-DESTFILE= /usr/lib/isdn/dest.cdb
+COUNTRYFILE = @DATADIR@/country.dat
+RATECONF= @I4LCONFDIR@/rate.conf
+RATEFILE= @DATADIR@/rate-at.dat
+HOLIDAYS= @DATADIR@/holiday-at.dat
+ZONEFILE= @DATADIR@/zone-at-%s.cdb
+DESTFILE= @DATADIR@/dest.cdb
 
 # providerselect
 VBN = 10
