--- a/isdnlog/samples/isdn.conf.lu.in
+++ b/isdnlog/samples/isdn.conf.lu.in
@@ -1,7 +1,6 @@
-# example of /etc/isdn/isdn.conf
-# copy this file to /etc/isdn/isdn.conf and edit
+# example of @I4LCONFDIR@/@CONFFILE@
 #
-# More information: /usr/doc/packages/i4l/isdnlog/README
+# More information: @DOCDIR@/*
 
 
 [GLOBAL]
@@ -16,7 +15,7 @@ AREACODE        = 0
 [VARIABLES]
 
 [ISDNLOG]
-LOGFILE = /var/log/isdn.log
+LOGFILE = @LOGFILE@
 ILABEL  = %b %e %T %ICall to tei %t from %N2 on %n2
 OLABEL  = %b %e %T %Itei %t calling %N2 with '%n0'
 REPFMTWWW       = "%X %D %17.17H %T %-17.17F %-20.20l SI: %S %9u %U %I %O"
@@ -27,12 +26,12 @@ CHARGEMAX       = 50.00
 
 CURRENCY = 1,EUR
 
-COUNTRYFILE = /usr/lib/isdn/country.dat
-# RATECONF= /etc/isdn/rate.conf.lu
-RATEFILE= /usr/lib/isdn/rate-lu.dat
-HOLIDAYS= /usr/lib/isdn/holiday-lu.dat
-# ZONEFILE= /usr/lib/isdn/zone-lu-%s.cdb
-DESTFILE= /usr/lib/isdn/dest.cdb
+COUNTRYFILE = @DATADIR@/country.dat
+# RATECONF= @I4LCONFDIR@/rate.conf.lu
+RATEFILE= @DATADIR@/rate-lu.dat
+HOLIDAYS= @DATADIR@/holiday-lu.dat
+# ZONEFILE= @DATADIR@/zone-lu-%s.cdb
+DESTFILE= @DATADIR@/dest.cdb
 
 # providerselect
 VBN = 2 #?
