--- a/isdnlog/samples/isdn.conf.nl.in
+++ b/isdnlog/samples/isdn.conf.nl.in
@@ -1,7 +1,6 @@
-# example of /etc/isdn/isdn.conf for the Netherlands
-# copy this file to /etc/isdn/isdn.conf and edit
+# example of @I4LCONFDIR@/@CONFFILE@ for the Netherlands
 #
-# More information: /usr/doc/packages/i4l/isdnlog/README
+# More information: @DOCDIR@/*
 
 
 [GLOBAL]
@@ -15,7 +14,7 @@ AREACODE        = 20
 [VARIABLES]
 
 [ISDNLOG]
-LOGFILE         = /var/log/isdn.log
+LOGFILE         = @LOGFILE@
 ILABEL          = %b %e %T %ICall to tei %t from %N2 on %n2
 OLABEL          = %b %e %T %Itei %t calling %N2 with %n2
 # alternatieven voor bovenstaande twee
@@ -28,12 +27,12 @@ REPFMT          = "  %X %D %16.16H %T %-15.15F %7u %U %I %O"
 CHARGEMAX       = 50.00
 CURRENCY        = 0.01,EUR
 
-COUNTRYFILE = /usr/lib/isdn/country.dat
-RATECONF= /etc/isdn/rate.conf
-RATEFILE= /usr/lib/isdn/rate-nl.dat
-HOLIDAYS= /usr/lib/isdn/holiday-nl.dat
-ZONEFILE= /usr/lib/isdn/zone-nl-%s.cdb
-DESTFILE= /usr/lib/isdn/dest.cdb
+COUNTRYFILE = @DATADIR@/country.dat
+RATECONF= @I4LCONFDIR@/rate.conf
+RATEFILE= @DATADIR@/rate-nl.dat
+HOLIDAYS= @DATADIR@/holiday-nl.dat
+ZONEFILE= @DATADIR@/zone-nl-%s.cdb
+DESTFILE= @DATADIR@/dest.cdb
 
 # providerselect
 VBN = 16:17
